added progress bar to HTML

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -50,6 +50,14 @@
                 <!-- Logged symptoms will appear here -->
             </div>
         </div>
+
+        <div class="stat-box">
+            <h3>Medication Progress</h3>
+            <div class="progress-bar">
+                <div id="adherenceProgress" class="progress"></div>
+            </div>
+            <p id="adherenceText">0% of medications taken</p>
+        </div>
     </div>
 
     <script src="script.js"></script>
