--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none':"> <!--Prevent clickjacking-->
-    <title>Medication Manager</title>
+    <title>MyMed</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="logo.png">
 </head>
 <body>
     <div class="dashboard-container">
@@ -22,7 +23,7 @@
     
     <div class="main-content">
         <header>
-            <h1>Medication Manager</h1>
+            <h1><img src="logo.png" alt="MyMed Medication Manager Logo" class="logo">MyMed Medication Manager</h1>
         </header>
 
         <section id="overview" class="dashboard-section active">
